cabal-version:       2.4
name:                issue-wanted
version:             0.0.0
description:         Web application to help beginners to start contributing into Haskell projects
synopsis:            Web application to help beginners to start contributing into Haskell projects
homepage:            https://github.com/kowainik/issue-wanted#readme
bug-reports:         https://github.com/kowainik/issue-wanted/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            Web, Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/issue-wanted.git

common common-options
  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       PatternSynonyms
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude

                       IW
                         -- Application Monad
                         IW.App
                           IW.App.Env
                           IW.App.Error
                           IW.App.Monad
                        
                         IW.Config
                         
                         -- Database
                         IW.Db
                           IW.Db.Functions
                           IW.Db.Schema
                      
                         -- Effects
                         IW.Effects.Log  
                         
                         -- Server
                         IW.Server
                           IW.Server.Search
  build-depends:       case-insensitive ^>= 1.2
                     , co-log ^>= 0.3.0  
                     , github == 0.20 
                     , http-types ^>= 0.12
                     , mtl ^>= 2.2.2
                     , postgresql-simple ^>= 0.6.1
                     , resource-pool
                     , servant ^>= 0.16
                     , servant-server ^>= 0.16

executable issue-wanted
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       issue-wanted

test-suite issue-wanted-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       issue-wanted