cabal-version:       2.4
name:                issue-wanted
version:             0.0.0
description:         Web application to help beginners to start contributing into Haskell projects
synopsis:            Web application to help beginners to start contributing into Haskell projects
homepage:            https://github.com/kowainik/issue-wanted#readme
bug-reports:         https://github.com/kowainik/issue-wanted/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            Web, Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/issue-wanted.git

common common-options
  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude

                       IW
                         -- Application Monad
                         IW.App
                           IW.App.Env
                           IW.App.Error
                           IW.App.Monad

                         IW.Config

                         -- Core Modules
                         IW.Core.Id
                         IW.Core.Issue
                         IW.Core.SqlArray
                         IW.Core.Repo
                         IW.Core.Url
                         IW.Core.WithId

                         -- Database
                         IW.Db
                           IW.Db.Functions
                           IW.Db.Issue
                           IW.Db.Repo
                           IW.Db.Schema

                         -- Effects
                         IW.Effects.Cabal
                         IW.Effects.Download
                         IW.Effects.Log

                         -- Server
                         IW.Server
                           IW.Server.Issue
                           IW.Server.Types

                         -- Sync Worker
                         IW.Sync.Search

  build-depends:       aeson >= 1.4
                     , bytestring ^>= 0.10
                     , Cabal ^>= 2.4.1.0
                     , case-insensitive ^>= 1.2
                     , co-log ^>= 0.3.0
                     , containers >= 0.6
                     , github == 0.22
                     , http-api-data ^>= 0.4
                     , http-client ^>= 0.5.14
                     , http-client-tls ^>= 0.3.5.3
                     , http-types ^>= 0.12
                     , lens ^>= 4.17
                     , mtl ^>= 2.2.2
                     , postgresql-simple ^>= 0.6.1
                     , random ^>= 1.1
                     , resource-pool
                     , servant ^>= 0.16
                     , servant-server ^>= 0.16
                     , text
                     , time >= 1.8 && < 1.10
                     , tomland ^>= 1.0.0
                     , unordered-containers
                     , vector ^>= 0.12.0.3
                     , warp ^>= 3.2

executable issue-wanted
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       issue-wanted

test-suite issue-wanted-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       Test.Assert
                       Test.Common
                       Test.Core.Issue
                       Test.Core.Repo
                       Test.Db
                       Test.Data
                       Test.Gen
                       Test.Sync

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       issue-wanted
                     , github == 0.22
                     , hedgehog ^>= 1.0
                     , hspec
                     , hspec-core
                     , mtl
                     , postgresql-simple
                     , resource-pool
                     , unordered-containers
