cabal-version:       2.4
name:                frontend
version:             0.0.0.0
description:         Web application to help beginners to start contributing into Haskell projects
synopsis:            Web application to help beginners to start contributing into Haskell projects
homepage:            https://github.com/kowainik/issue-wanted#readme
bug-reports:         https://github.com/kowainik/issue-wanted/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            Web, Application
build-type:          Simple
tested-with:         GHC == 8.4.3

common common-options
  build-depends:       base ^>= 4.11.0.0
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Main
  other-modules:       Paths_frontend
  build-depends:       issue-wanted
                     , jsaddle
                     , jsaddle-warp
                     , miso

executable frontend-exe
  import:              common-options
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Paths_frontend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       jsaddle
                     , jsaddle-warp
                     , miso
                     , frontend
